--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
     <section class="container">
       <div class="row">
         <div class="col">
-          <br><br><br><br><br><br><br>
+          <br><br><br><br><br>
           <h1 style="font-size: 75;">Financial Literacy</h1>
-          <p>Learn more about personal finance</p>
+          <p>
+            Leaving a fulfilled life is very important to all human beings. 
+            It involves affording to experience all the activities that we desire. 
+            These occurrences are especially supported by the availability of funds.
+            It is often said that money cannot buy happiness but here at Wajibika, we believe that money can facilitate happiness.
+            Join our community and learn more on how to manage your financial resources and be on your way to living a fulfilled life!!
+          </p>
           <p><a href="learn.html" class="btn btn-outline-dark">Learn more</a></p>
 
         </div>
@@ -84,11 +90,11 @@
         </div>
       </div>
     </section>
-    <footer>
+    <!-- <footer>
       <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom">
         <a class="navbar-brand" href="#">Wajibika</a>
       </nav>
-    </footer>
+    </footer> -->
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -101,8 +107,9 @@
         </div>
         <div class="modal-body">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Leo urna molestie at elementum eu. Justo donec enim diam vulputate ut pharetra. 
+            Financial literacy is vital in ensuring a human being lives a good life. 
+            Wajibika strives to provide important financial information by aggregating these 
+            information from different sites and dividing them in different categories for easy access. 
           </p>
         </div>
       </div>
