--- a/learn.html
+++ b/learn.html
@@ -35,45 +35,86 @@
         <br><br><br><br>
         <div class="row">
             <div class="col">
-                <div class="card">
+                <div class="card border-secondary">
                     <div class="card-body">
-                        <h4 style="text-align: center;">Budgeting/Savings</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Leo urna molestie at elementum eu. Justo donec enim diam vulputate ut pharetra. 
+                        <h4 style="text-align: center;">Budgeting</h4>
+                        <p>
+                          Budgeting is an essential process that ensures that the money and resources at hand are spent on the activities of an individual depending on the priorities assigned to them.  
+                          These activities are outlined on an item known as a budget and the amount needed for that activity written along with it.
                         </p>
-                        <p style="text-align: center;"><a href="learn.html" class="btn btn-outline-dark">View full article</a></p>
+                        <h6>
+                          Explore Topics on Budgeting:
+                        </h6>
+                        <ul class="nav flex-column">
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.mymoneycoach.ca/budgeting/what-is-a-budget-planning-forecasting"  style="color: rgb(2, 2, 2);">What is budgeting?</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.mymoneycoach.ca/budgeting/how-to-budget-your-money"  style="color: rgb(2, 2, 2);">How to budget your money?</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.thebalance.com/how-to-make-a-budget-1289587"   style="color: rgb(2, 2, 2);">Make a personal budget in 6 simple steps</a>
+                          </li>
+                      </ul>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card border-secondary">
                     <div class="card-body">
-                        <h4 style="text-align: center;">Banking</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Leo urna molestie at elementum eu. Justo donec enim diam vulputate ut pharetra.
+                        <h4 style="text-align: center;">Savings</h4>
+                        <p>Financial independence is the freedom to choose the work you want to be involved in and the amount of hours you want to work.  It is also an opportunity to be able to help other people who are not in a position to be of help to other people. 
+                          Saving an adequate amount of money places you in the position to experience these things and more. 
                         </p>
-                        <p style="text-align: center;"><a href="learn.html" class="btn btn-outline-dark">View full article</a></p>
+                        <h6>
+                          Explore Topics on Savings:
+                        </h6>
+                        <ul class="nav flex-column">
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.mymoneycoach.ca/saving-money/why-save-money"  style="color: rgb(2, 2, 2);">Why you should save money</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.mymoneycoach.ca/blog/ways-to-save-for-financial-goal-5-steps-everyone-can-do"  style="color: rgb(2, 2, 2);">Saving for a specific goal</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.mymoneycoach.ca/saving-money/saving-tips"   style="color: rgb(2, 2, 2);">Effective tips for saving money</a>
+                          </li>
+                      </ul>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card border-secondary">
                     <div class="card-body">
                         <h4 style="text-align: center;">Retirement Plan</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Leo urna molestie at elementum eu. Justo donec enim diam vulputate ut pharetra. 
+                        <p>
+                          Retirement planning is the process of taking steps in ensuring that an individual retires with financial freedom. It involves the task of deciding at what age to retire, 
+                          where to live after retiring and how much money will be required to cover the expenses of the activities planned for the retirement period.
                         </p>
-                        <p style="text-align: center;"><a href="learn.html" class="btn btn-outline-dark">View full article</a></p>
+                        <h6>
+                          Explore Topics on Retirement Plan:
+                        </h6>
+                        <ul class="nav flex-column">
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.investopedia.com/articles/retirement/11/5-steps-to-retirement-plan.asp"  style="color: rgb(2, 2, 2);">Five steps to a secure retirements</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.investopedia.com/retirement/how-much-you-should-have-saved-age/"  style="color: rgb(2, 2, 2);">How much should you save?</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://centonomy.com/planning-for-retirement/" style="color: rgb(2, 2, 2);">Planning for retirement</a>
+                          </li>
+                      </ul>
                     </div>
                 </div>
             </div>
           </div>
     </section>
-    <footer>
+    <!-- <footer>
       <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom">
         <a class="navbar-brand" href="#">Wajibika</a>
       </nav>
-    </footer>
+    </footer> -->
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -86,8 +127,8 @@
             </div>
             <div class="modal-body">
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Leo urna molestie at elementum eu. Justo donec enim diam vulputate ut pharetra. 
+                  Financial literacy is vital in ensuring a human being lives a good life. 
+                  Wajibika strives to provide important financial information by aggregating these  information from different sites and dividing them in different categories for easy access. 
                 </p>
             </div>
             </div>
