added quiz link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             It is often said that money cannot buy happiness but here at Wajibika, we believe that money can facilitate happiness.
             Join our community and learn more on how to manage your financial resources and be on your way to living a fulfilled life!!
           </p>
-          <p><a href="learn.html" class="btn btn-outline-dark">Learn more</a></p>
+          <p><a href="learn.html" class="btn btn-dark">Learn more</a> &nbsp;<a href=" https://empower.me/quiz/" class="btn btn-outline-dark">Find out your money personality</a></p>
 
         </div>
         <div class="col">
@@ -90,11 +90,6 @@
         </div>
       </div>
     </section>
-    <!-- <footer>
-      <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom">
-        <a class="navbar-brand" href="#">Wajibika</a>
-      </nav>
-    </footer> -->
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
